# LR7

./: CMakeLists.txt  funk1.cpp  funk2  funk2.cpp  funk3.cpp  funk4.cpp  funk5.cpp  header.h  solution  solution.cpp
